make styles for the content

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes </h1>
-    <p>Welcome to the Odin Recipes project!</p>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <h1 class="title">Odin Recipes </h1>
+    <p class="intro">Welcome to the Odin Recipes project</p>
+    <div class="links"> <a href="recipes/lasagna.html">Lasagna</a></div>
 </body>
 <script src="script.js"></script>
 </html>
